--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,14 @@
-Flask==3.0.0
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
+Flask==2.3.3
+Flask-SQLAlchemy==3.0.5
+Flask-Migrate==4.0.4
 Flask-CORS==4.0.0
-python-dotenv==1.0.0
-Flask-JWT-Extended==4.6.0
+Flask-JWT-Extended==4.5.2
+Flask-Login==0.6.3
+
+pandas==2.1.4  # For data manipulation in reports
+matplotlib==3.8.1  # For data visualization in dashboard
+seaborn==0.12.3  # For enhanced data visualization
+reportlab==4.0.7  # For PDF report generation
+python-dotenv==1.0.0  # For environment variable management
+pytest==7.4.0  # For testing
+pytest-flask==1.2.0  # For Flask-specific testing utilities
