--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,26 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-Flask-Migrate==4.0.4
-Flask-CORS==4.0.0
+﻿boto3==1.42.19
+Faker==40.1.0
+flasgger==0.9.7.1
+Flask==3.0.0
+Flask-Caching==2.3.1
+Flask-Cors==4.0.0
 Flask-JWT-Extended==4.5.2
+Flask-Limiter==4.1.1
 Flask-Login==0.6.3
-
-pandas==2.1.4  # For data manipulation in reports
-matplotlib==3.8.1  # For data visualization in dashboard
-seaborn==0.12.3  # For enhanced data visualization
-reportlab==4.0.7  # For PDF report generation
-python-dotenv==1.0.0  # For environment variable management
-pytest==7.4.0  # For testing
-pytest-flask==1.2.0  # For Flask-specific testing utilities
+Flask-Migrate==4.0.4
+Flask-SQLAlchemy==3.1.1
+flask-restx==1.3.2
+marshmallow==3.23.1
+matplotlib==3.10.8
+openpyxl==3.1.5
+pandas==2.3.3
+python-crontab==3.3.0
+python-dotenv==1.0.0
+pytest==8.3.4
+pytest-flask==1.3.0
+redis==7.1.0
+reportlab==4.4.7
+requests==2.32.5
+schedule==1.2.0
+scipy==1.16.3
+Werkzeug==3.0.1
