--- a/frontend/mercadinhosys-frontend/package.json
+++ b/frontend/mercadinhosys-frontend/package.json
@@ -13,8 +13,10 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
+    "@tanstack/react-query": "^5.90.16",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
+    "lucide-react": "^0.562.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
