--- a/frontend/mercadinhosys-frontend/package.json
+++ b/frontend/mercadinhosys-frontend/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "postcss": "^8.5.6",
+    "quagga": "^0.6.16",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.11.0",
     "tailwindcss": "^3.4.19"
   },
