--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,26 +1,34 @@
 ﻿boto3==1.42.19
-Faker==40.1.0
-flasgger==0.9.7.1
+alembic==1.17.2
+blinker==1.9.0
+cachelib==0.13.0
+click==8.3.1
+colorama==0.4.6
+coverage==7.13.0
 Flask==3.0.0
 Flask-Caching==2.3.1
 Flask-Cors==4.0.0
-Flask-JWT-Extended==4.5.2
-Flask-Limiter==4.1.1
+Flask-JWT-Extended==4.6.0
 Flask-Login==0.6.3
-Flask-Migrate==4.0.4
+Flask-Mail==0.10.0
+Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
-flask-restx==1.3.2
-marshmallow==3.23.1
-matplotlib==3.10.8
-openpyxl==3.1.5
-pandas==2.3.3
-python-crontab==3.3.0
+git-filter-repo==2.47.0
+greenlet==3.3.0
+gunicorn==23.0.0
+iniconfig==2.3.0
+itsdangerous==2.2.0
+Jinja2==3.1.6
+Mako==1.3.10
+MarkupSafe==3.0.3
+packaging==25.0
+pluggy==1.6.0
+psycopg2-binary==2.9.11
+Pygments==2.19.2
+PyJWT==2.10.1
+pytest==9.0.2
+pytest-cov==7.0.0
 python-dotenv==1.0.0
-pytest==8.3.4
-pytest-flask==1.3.0
-redis==7.1.0
-reportlab==4.4.7
-requests==2.32.5
-schedule==1.2.0
-scipy==1.16.3
-Werkzeug==3.0.1
+SQLAlchemy==2.0.45
+typing_extensions==4.15.0
+Werkzeug==3.1.4
