--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,34 +1,81 @@
-﻿boto3==1.42.19
+﻿
+gunicorn==23.0.0
 alembic==1.17.2
+aniso8601==10.0.1
+attrs==25.4.0
 blinker==1.9.0
+boto3==1.42.19
+botocore==1.42.19
 cachelib==0.13.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
 click==8.3.1
 colorama==0.4.6
-coverage==7.13.0
-Flask==3.0.0
+contourpy==1.3.3
+cycler==0.12.1
+Deprecated==1.3.1
+et_xmlfile==2.0.0
+Faker==40.1.0
+flasgger==0.9.7.1
+Flask==2.3.3
 Flask-Caching==2.3.1
 Flask-Cors==4.0.0
-Flask-JWT-Extended==4.6.0
+Flask-JWT-Extended==4.5.2
+Flask-Limiter==4.1.1
 Flask-Login==0.6.3
 Flask-Mail==0.10.0
-Flask-Migrate==4.0.5
-Flask-SQLAlchemy==3.1.1
-git-filter-repo==2.47.0
+Flask-Migrate==4.0.4
+flask-restx==1.3.2
+Flask-SQLAlchemy==3.0.5
+fonttools==4.61.1
 greenlet==3.3.0
-gunicorn==23.0.0
+idna==3.11
+importlib_resources==6.5.2
 iniconfig==2.3.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
+jmespath==1.0.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+kiwisolver==1.4.9
+limits==5.6.0
 Mako==1.3.10
 MarkupSafe==3.0.3
+matplotlib==3.10.8
+mistune==3.2.0
+numpy==2.4.0
+openpyxl==3.1.5
+ordered-set==4.1.0
 packaging==25.0
+pandas==2.3.3
+pillow==12.0.0
 pluggy==1.6.0
 psycopg2-binary==2.9.11
 Pygments==2.19.2
 PyJWT==2.10.1
+pyparsing==3.3.1
 pytest==9.0.2
-pytest-cov==7.0.0
+pytest-flask==1.3.0
+python-crontab==3.3.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
+pytz==2025.2
+PyYAML==6.0.3
+redis==7.1.0
+referencing==0.37.0
+reportlab==4.4.7
+requests==2.32.5
+rpds-py==0.30.0
+s3transfer==0.16.0
+schedule==1.2.2
+scipy==1.16.3
+setuptools==80.9.0
+six==1.17.0
 SQLAlchemy==2.0.45
 typing_extensions==4.15.0
+tzdata==2025.3
+urllib3==2.6.2
 Werkzeug==3.1.4
+wheel==0.45.1
+wrapt==2.0.1
+psycopg2-binary==2.9.11
