modificações para teste online

--- a/backend/.env.render
+++ b/backend/.env.render
@@ -18,6 +18,15 @@ FLASK_APP=run.py
 # Update with your actual frontend URL
 CORS_ORIGINS=https://mercadinhosys-frontend.onrender.com,https://mercadinhosys.onrender.com
 
+# ==================== EMAIL (Gmail) ====================
+# Configure no Render Dashboard
+# MAIL_SERVER=smtp.gmail.com
+# MAIL_PORT=587
+# MAIL_USE_TLS=true
+# MAIL_USERNAME=seu-email@gmail.com
+# MAIL_PASSWORD=sua-senha-de-app-16-caracteres
+# MAIL_DEFAULT_SENDER=seu-email@gmail.com
+
 # ==================== OPTIONAL ====================
 PYTHON_VERSION=3.11.0
 PORT=10000
