--- a/.env.example
+++ b/.env.example
@@ -21,12 +21,14 @@ CORS_ORIGINS=http://localhost,http://localhost:3000,http://localhost:5173,http:/
 # ==================== REDIS ====================
 REDIS_PASSWORD=redis_secure_pass_CHANGE_ME
 
-# ==================== EMAIL (Opcional) ====================
+# ==================== EMAIL (Gmail) ====================
+# Para gerar senha de app: https://myaccount.google.com/apppasswords
 MAIL_SERVER=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USE_TLS=true
 MAIL_USERNAME=seu-email@gmail.com
-MAIL_PASSWORD=sua-senha-de-app
+MAIL_PASSWORD=sua-senha-de-app-16-caracteres
+MAIL_DEFAULT_SENDER=seu-email@gmail.com
 
 # ==================== BACKUP ====================
 BACKUP_ENABLED=true
