fix: configurar URL correta do backend Render

--- a/frontend/mercadinhosys-frontend/.env.production
+++ b/frontend/mercadinhosys-frontend/.env.production
@@ -2,7 +2,7 @@
 # This file is used when building for production
 
 # Backend API URL (Render.com)
-VITE_API_URL=https://mercadinhosys-backend.onrender.com/api
+VITE_API_URL=https://mercadinhosys.onrender.com/api
 
 # App Info
 VITE_APP_NAME=MercadinhoSys
