--- a/frontend/mercadinhosys-frontend/.env.development
+++ b/frontend/mercadinhosys-frontend/.env.development
@@ -2,7 +2,7 @@
 # This file is used when running locally
 
 # Backend API URL (Local)
-VITE_API_URL=http://127.0.0.1:5000/api
+VITE_API_URL=http://localhost:5000/api
 
 # App Info
 VITE_APP_NAME=MercadinhoSys [DEV]
