--- a/frontend/mercadinhosys-frontend/package.json
+++ b/frontend/mercadinhosys-frontend/package.json
@@ -14,18 +14,33 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tanstack/react-query": "^5.90.16",
     "autoprefixer": "^10.4.23",
     "axios": "^1.13.2",
+    "chart.js": "^4.5.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
-    "recharts": "^2.6.2",
     "postcss": "^8.5.6",
     "quagga": "^0.6.16",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.11.0",
-    "tailwindcss": "^3.4.19"
+    "recharts": "^2.6.2",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^3.4.19",
+    "toast": "^0.5.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
