--- a/backend/.env.example
+++ b/backend/.env.example
@@ -11,10 +11,11 @@ DATABASE_URL=
 # SQLITE_DB=sqlite:///mercadinho.db
 SQLITE_DB=
 
-# SECURITY
-# Gere chaves seguras em produção via painel do provedor
-SECRET_KEY=
-JWT_SECRET_KEY=
+# SECURITY - CRÍTICO PARA PRODUÇÃO
+# ⚠️  NUNCA use valores padrão em produção!
+# Gere chaves seguras com: openssl rand -hex 32
+SECRET_KEY=your-super-secure-random-secret-key-here
+JWT_SECRET_KEY=your-jwt-super-secure-random-secret-key-here
 
 # CORS
 CORS_ORIGINS=http://localhost:3000,http://localhost:5173
