--- a/frontend/mercadinhosys-frontend/package.json
+++ b/frontend/mercadinhosys-frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.32.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.6",
@@ -25,6 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.34.0",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
@@ -39,7 +41,6 @@
     "recharts": "^2.6.2",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.19",
-    "toast": "^0.5.4",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
