feat: Full-stack init, critical column fallback, remove hardcoded credentials from scripts

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,6 +13,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     postgresql-client \
     && rm -rf /var/lib/apt/lists/*
 
+ENV PATH=/root/.local/bin:$PATH
+
 # Criar diretório de trabalho
 WORKDIR /app
 
