Funcionalidade: Implementação de um novo sistema de Ponto de Venda (PDV), gestão de clientes, serviço de e-mail para notas fiscais e orquestração de painéis de controle científicos.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -43,6 +43,9 @@ services:
       SECRET_KEY: dev-secret-key
       JWT_SECRET_KEY: dev-jwt-secret
       CORS_ORIGINS: http://localhost:5173
+    env_file:
+      - ./backend/.env
+      - ./backend/mail.env
     volumes:
       - ./backend:/app
       - ./backend/instance:/app/instance
