feat: Update configuration and error handling for improved stability
- Added DATABASE_URL to docker-compose for local development with SQLite.
- Enhanced error handling in database operations to ensure proper rollback on exceptions.
- Introduced retry logic for API requests to handle network timeouts and improve user experience.
- Adjusted product listing logic to optimize database queries and prevent transaction failures.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,6 +38,7 @@ services:
       FLASK_ENV: development
       FLASK_DEBUG: 1
       WERKZEUG_DEBUG_PIN: "off"
+      DATABASE_URL: sqlite:///instance/mercadinho.db
       # Não definir DATABASE_URL = app usa SQLite (instance/mercadinho.db), mesmo banco do desenvolvimento local.
       # Para usar Postgres no Docker: crie backend/.env com DATABASE_URL=postgresql://mercadinho_user:mercadinho_secure_pass_2024@postgres:5432/mercadinhosys
       SECRET_KEY: dev-secret-key
