--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,8 @@ services:
         value: production
       - key: NEON_DATABASE_URL
         sync: false  # Configurar manualmente com Neon PostgreSQL
+      - key: AIVEN_DATABASE_URL
+        sync: false  # Compatibilidade com deploys que usam Aiven
       - key: DATABASE_URL
         sync: false  # Fallback se NEON_DATABASE_URL não estiver configurado
       - key: SECRET_KEY
