fix: corrige erros criticos no Docker e conflito de merge em produtos.py
Remove conflito de merge em produtos.py que impedia carregamento do blueprint
docker-compose.dev.yml: forca SQLite local com caminho absoluto, zera variaveis cloud
vite.config.ts: adiciona process.env como fallback para VITE_API_TARGET no Docker
decorator_jwt.py: remove log DEBUG de JWT em cada requisicao
produtos.py: remove log DEBUG desnecessario
toast.tsx: redesign profissional dark-mode com SVG icons
PDVPage.tsx: toasts com IDs unicos e validacao de estoque robusta
main.tsx: remove React.StrictMode para eliminar double-renders
DebugRoutes.tsx: log apenas em desenvolvimento

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -38,9 +38,13 @@ services:
       FLASK_ENV: development
       FLASK_DEBUG: 1
       WERKZEUG_DEBUG_PIN: "off"
-      DATABASE_URL: sqlite:///instance/mercadinho.db
-      # Não definir DATABASE_URL = app usa SQLite (instance/mercadinho.db), mesmo banco do desenvolvimento local.
-      # Para usar Postgres no Docker: crie backend/.env com DATABASE_URL=postgresql://mercadinho_user:mercadinho_secure_pass_2024@postgres:5432/mercadinhosys
+      # Força SQLite local (caminho absoluto) — prioridade máxima no __init__.py
+      DATABASE_URL_TARGET: "sqlite:////app/instance/mercadinho.db"
+      DATABASE_URL: "sqlite:////app/instance/mercadinho.db"
+      # Zerar variáveis cloud para evitar vazamento do .env para o Docker
+      AIVEN_DATABASE_URL: ""
+      DB_PRIMARY: ""
+      POSTGRES_URL: ""
       SECRET_KEY: dev-secret-key
       JWT_SECRET_KEY: dev-jwt-secret
       CORS_ORIGINS: http://localhost:5173
