--- a/frontend/mercadinhosys-frontend/package.json
+++ b/frontend/mercadinhosys-frontend/package.json
@@ -15,6 +15,7 @@
     "@chakra-ui/react": "^3.32.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@ericblade/quagga2": "^1.12.1",
     "@mui/icons-material": "^7.3.6",
     "@mui/material": "^7.3.6",
     "@radix-ui/react-popover": "^1.1.15",
@@ -33,7 +34,6 @@
     "jspdf-autotable": "^5.0.7",
     "lucide-react": "^0.562.0",
     "postcss": "^8.5.6",
-    "quagga": "^0.6.16",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.1",
     "react-day-picker": "^9.13.0",
