--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,8 @@ services:
       - backend
     ports:
       - "80:80"
+    environment:
+      - VITE_API_TARGET=http://mercadinhosys-backend:5000
     healthcheck:
       test: ["CMD", "wget", "--quiet", "--tries=1", "--spider", "http://localhost/health"]
       interval: 30s
