--- a/frontend/mercadinhosys-frontend/Dockerfile
+++ b/frontend/mercadinhosys-frontend/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Instalar dependências
-RUN npm ci --only=production
+RUN npm ci
 
 # Copiar código fonte
 COPY . .
