--- a/frontend/mercadinhosys-frontend/nginx.conf
+++ b/frontend/mercadinhosys-frontend/nginx.conf
@@ -28,7 +28,7 @@ server {
 
     # Proxy para API (opcional - se quiser usar nginx como reverse proxy)
     location /api {
-        proxy_pass http://backend:5000;
+        proxy_pass http://mercadinhosys-backend:5000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
