security: remove exposed credentials and fix secret scanning violations

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,8 @@ backups/
 tmp/
 temp/
 *.tmp
+
+# ==================== Output / Debug files ====================
+benchmark_output.txt
+*_output.txt
+debug_request.py
