--- a/.gitignore
+++ b/.gitignore
@@ -1,81 +1,47 @@
-# ==================== SECURITY - NEVER COMMIT ====================
-# Environment files with credentials
-.env
+# ==================== SECURITY - NEVER COMMIT =============
+# Credentials and Environment
+*.env
 .env.*
 !.env.example
-backend/mail.env
-*.pem
-*.key
-*.crt
 
-# Database credentials
-database.ini
-db_config.json
-
-# API keys and secrets
-secrets.json
-credentials.json
-*.secret
-replacements.txt
-
-# ==================== Python ====================
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-venv/
 env/
+venv/
 ENV/
-*.egg-info/
-dist/
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
 *.egg
 
-# ==================== Database ====================
+# Databases
 *.db
 *.sqlite
 *.sqlite3
-instance/
+backend/instance/
+backend/*.sqlite
+backend/*.db
 
-# ==================== Logs ====================
-*.log
-logs/
-
-# ==================== IDE ====================
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# ==================== OS ====================
-.DS_Store
-Thumbs.db
-desktop.ini
-
-# ==================== Node ====================
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# ==================== Build ====================
-dist/
-.dist/
-build/
-
-# ==================== Backups ====================
-backups/
-*.backup
-*.bak
-
-# ==================== Temporary ====================
-tmp/
-temp/
-*.tmp
-
-# ==================== Output / Debug files ====================
+# Logs
 benchmark_output.txt
 *_output.txt
 debug_request.py
+
+# OS
+.DS_Store
+Thumbs.db
